--- a/source/_posts/2022-01-20-project1.md
+++ b/source/_posts/2022-01-20-project1.md
@@ -4,6 +4,6 @@ date: 2022-01-20 16:38:25
 tags: project
 categories:
   - [Project, P1]
-
 thumbnail: https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcThBJv7Rmo5PK3Z95NXO1wJJmL0FC_TchBebA&usqp=CAU
+banner: https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcThBJv7Rmo5PK3Z95NXO1wJJmL0FC_TchBebA&usqp=CAU
 ---
